# trade-signal-generator

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  annotated.html  base__strategy__module_8h_source.html  base__strategy__module__impl_8h_source.html  classEventCB1-members.html  classEventCB1.html  classEventCB1__coll__graph.map  classEventCB1__coll__graph.md5  classes.html  classjas_1_1platform_1_1EventHandler-members.html  classjas_1_1platform_1_1EventHandler.html  classjas_1_1platform_1_1EventModule-members.html  classjas_1_1platform_1_1EventModule.html  classjas_1_1platform_1_1EventModule__coll__graph.map  classjas_1_1platform_1_1EventModule__coll__graph.md5  classjas_1_1platform_1_1FeedEventCallback-members.html  classjas_1_1platform_1_1FeedEventCallback.html  classjas_1_1platform_1_1FeedEventCallback__inherit__graph.map  classjas_1_1platform_1_1FeedEventCallback__inherit__graph.md5  classjas_1_1platform_1_1FileFeedGetter-members.html  classjas_1_1platform_1_1FileFeedGetter.html  classjas_1_1strategy_1_1SMAQueue-members.html  classjas_1_1strategy_1_1SMAQueue.html  classjas_1_1strategy_1_1SMAStrategy-members.html  classjas_1_1strategy_1_1SMAStrategy.html  classjas_1_1strategy_1_1SMAStrategyModule-members.html  classjas_1_1strategy_1_1SMAStrategyModule.html  classjas_1_1strategy_1_1SMAStrategyModule__inherit__graph.map  classjas_1_1strategy_1_1SMAStrategyModule__inherit__graph.md5  classjas_1_1strategy_1_1SMAStrategy__coll__graph.map  classjas_1_1strategy_1_1SMAStrategy__coll__graph.md5  dir_2f2a893fc90f694eef2aae11776ef3ce.html  (+56 more)
platform/: CMakeLists.txt
(+46 files in other folders)
